api명세서 수정
